Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2392

Kerberos support (GSS keyring) is broken due to major structural changes between 2.6.x and 2.6.32

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.3.0, Lustre 2.4.0
    • Linux distributions running Kernel >= 2.6.32
    • 3
    • 5668

      Kerberos support for lustre employs the GSS framework and the keyring mechanism (gss_keyring.c) to maintain and cache cryptographic keys in the Kernel. Due to major structural changes between 2.6.x and 2.6.32 the support is broken.

            keith Keith Mannthey (Inactive)
            thomas.stibor Thomas Stibor
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: