LU-2392 kerberos: GSS keyring is broken >=2.6.29

Kerberos support for lustre employs the GSS framework
and the keyring mechanism (gss_keyring.c) to maintain
and cache cryptographic keys in the Kernel. Due to
structural changes in the kernel the keyring is
(mostly) separated from task_struct
and accessible via credential structure.

Signed-off-by: Andrew Korty <ajk@iu.edu>
Change-Id: Ia022e1d76e6eb0308614f8af615e67d39f1d9e98
Reviewed-on: http://review.whamcloud.com/4708
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Keith Mannthey <keith.mannthey@intel.com>