libcfs/autoconf/lustre-libcfs.m4
@@ -647,6 +647,15 @@ AC_DEFUN([LIBCFS_HAVE_OOM_H],
 ])
 ])
 
+AC_DEFUN([LIBCFS_HAVE_KEYTYPE_H],
+[LB_CHECK_FILE([$LINUX/include/linux/key-type.h], [
+        AC_DEFINE(HAVE_LINUX_KEYTYPE_H, 1,
+                [kernel has include/key-type.h])
+],[
+        AC_MSG_RESULT([no])
+])
+])
+
 #
 # check set_mems_allowed
 # 2.6.31 adds function set_mems_allowed in cpuset.h
@@ -812,6 +821,7 @@ LIBCFS_SCATTERLIST_SETPAGE
 LIBCFS_SCATTERLIST_INITTABLE
 LIBCFS_NETWORK_NAMESPACE
 LIBCFS_FUNC_DUMP_TRACE
+LIBCFS_HAVE_KEYTYPE_H
 # 2.6.26
 LIBCFS_SEM_COUNT
 # 2.6.27
